# TensorDex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml
ae/: FIGURE_MAP.md  README.md  RESULTS.md  _blobs.py  bench_baselines.py  build_report.py  build_sample_bundle.py  download_cache.py  fit_predict.py  render.py  requirements-ae.txt  requirements-freeze.txt  run_full.py  stage_data.py  upload_cache.py  verify_recall.py  verify_s3_ids.py  verify_sample.py
ae/appendix/: .gitignore  appendix.tex
ae/bench/: bench_facility.py  run_scaling.py
ae/bench/algorithms/: greedy_facility_location.py  ilp_facility_location.py  micro_algorithms.py  primal_dual_facility_location.py
ae/bench/algos/: __init__.py  ilp_ratio.py  primal_dual_ratio.py
ae/charts/: __init__.py  _colors.py  _db.py  _root.py  bcs_evaluation.py  cdf_analysis.py  codec_comparison.py  compression_matrix.py  entropy_analysis.py  flexsplit_analysis.py  model_level_reduction.py  modelhub_growth.py  modelhub_metadata.py  rr_qps_comparison.py  scatter_analysis.py  throughput_and_cdf.py  throughput_comparison.py
demo/: index.html  landing.html
docs/: ROADMAP.md
examples/: benchmark_chain_strategies.py  compress_checkpoints.py  demo.py  quickstart.py  table3_bench.rs  zipllm_bitx_bench.rs
src/rust/: lib.rs  transfer.rs
src/rust/codec/: experimental.rs  lz4.rs  mod.rs  zstd.rs
src/rust/compression/: execute.rs  mod.rs  plan.rs  planner.rs
src/rust/ingest/: blob_writer.rs  hash.rs  mod.rs  pipeline.rs  safetensors_reader.rs
src/rust/kernels/: bitx.rs  fmpp.rs  mod.rs  sketch.rs  tensorx.rs  xor.rs
src/rust/metadata/: fingerprint.rs  mod.rs  schema.rs  store.rs
src/rust/resolvers/: mod.rs  s3.rs  simple.rs
src/rust/utils/: mod.rs  transposition.rs  zigzag.rs  zstd_xor_dict.rs
src/tensordex/: __init__.py  __main__.py  cli.py
src/tensordex/client/: __init__.py  remote.py
src/tensordex/compression/: __init__.py  compressor.py  flexsplit.py
src/tensordex/core/: __init__.py  _serde.py  codec.py  engine.py  metadata.py  storage.py  utils.py
src/tensordex/integrations/: __init__.py  hf_io.py
src/tensordex/server/: __init__.py  app.py
tests/: test_bin_ingest.py  test_delta_graph.py  test_flexsplit.py  test_integrity.py  test_planner.py  test_pull_shard.py  test_pull_shared.py  test_tensordex_remote.py
