[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tensordex"
description = "Tensor-aware content-addressable storage for ML weights, with Rust-accelerated ingest and base+delta compression"
authors = [
    {name = "Tingfeng Lan", email = "tingfeng@virginia.edu"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache-2.0 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core runtime — the only third-party modules imported by the package.
# Everything else (server, S3, dev tooling) lives in the optional groups below.
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "safetensors>=0.3.0",
    "huggingface-hub>=0.15.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# `tensordex serve` — FastAPI control plane (imported lazily in server/app.py).
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
# S3 storage backend (imported lazily in core/storage.py).
s3 = [
    "boto3>=1.34",
]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "maturin>=1.0,<2.0",
    "ruff>=0.1.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]

[project.scripts]
tensordex = "tensordex.cli:main"

[project.urls]
Homepage = "https://github.com/Antlera/tensordex"
Repository = "https://github.com/Antlera/tensordex"
Issues = "https://github.com/Antlera/tensordex/issues"

[tool.maturin]
python-source = "src"
module-name = "tensordex._ops"
bindings = "pyo3"
features = ["pyo3/extension-module"]
# Always ship optimized kernels — a debug build is ~15x slower and would make
# every throughput number (and Tier-1 verification wall time) misleading.
profile = "release"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tensordex*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by the formatter
    "B008",   # function calls in argument defaults — typer/CLI idiom
    "B034",   # re.split positional args
    "B904",   # raise-from — the re-raises here are deliberate
    "UP006",  # keep Dict/List annotations for py3.8-readable signatures
    "UP045",  # keep Optional[X] over X | None for py3.8
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmark tests",
]
